--- a/index.html
+++ b/index.html
@@ -37,14 +37,9 @@ https://drive.google.com/uc?export=view&id=1LeoUEVpdO-3pSIMURWJRUAfSXCTcdLas" --
         <!-- summary -->
         <section>
             <h2>About Me</h2>
-            <p> I'm an <i>enthusiastic</i> <i><b>decision maker</b></i> currently persuing studies in
-            <a href="https://www.springboard.com/courses/software-development-amazon">Springboards Wed Development</a>
-            course.
-            My leadership capabilities are not only demonstrated through academic persuits but through real world
-            experiences.
-            Transitioning from this program, I want to be employed somewhere I can put my unique skills to use.
-            My dedication to solving problems with the combination of creatively finding solutions has led me to the
-            wonderful world of Web Development. </p>
+            <p> I'm an <i>enthusiastic</i> <i><b>decision maker</b></i>,analytical, detail-oriented software developer and recent graduate from 
+            <a href="https://www.springboard.com/courses/software-development-amazon">Springboards Software Development</a>
+             certification program. Passionate about continuous learning and creating innovative solutions.</p>
         </section>
         <hr>
 
