--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ https://drive.google.com/uc?export=view&id=1LeoUEVpdO-3pSIMURWJRUAfSXCTcdLas" --
             <!-- projects -->
             <h2>Projects</h2>
             <ol style="list-style-position: inside">
-                <li>Project 1</li>
-                <li>Project 2</li>
+                <li>Project 1: < a href="https://kidy22.github.io/My-personal-Cv/" target="_blank">View My Cv</a></li>
+                <li>Project 2: </li>
                 <li>Project 3</li>
             </ol>
         </section>
