--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ https://drive.google.com/uc?export=view&id=1LeoUEVpdO-3pSIMURWJRUAfSXCTcdLas" --
             <h2>Projects</h2>
             <ol style="list-style-position: inside">
                 <li>Project 1: < a href="https://kidy22.github.io/My-personal-Cv/" target="_blank">View My Cv</a></li>
-                <li>Project 2: </li>
+                <li>Project 2: < a href="https://kidy22.github.io/meme-generator/" target="_blank">View Meme Generator</a></li>
                 <li>Project 3</li>
             </ol>
         </section>
