--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ https://drive.google.com/uc?export=view&id=1LeoUEVpdO-3pSIMURWJRUAfSXCTcdLas" --
         <!-- summary -->
         <section>
             <h2>About Me</h2>
-            <p> I'm an <i>enthusiastic</i> <i><b>decision maker</b></i>,analytical, detail-oriented software developer and recent graduate from 
+            <p> I'm an <i>enthusiastic</i> <i><b>decision maker</b></i> ,analytical, detail-oriented software developer and recent graduate from 
             <a href="https://www.springboard.com/courses/software-development-amazon">Springboards Software Development</a>
              certification program. Passionate about continuous learning and creating innovative solutions.</p>
         </section>
@@ -103,8 +103,8 @@ https://drive.google.com/uc?export=view&id=1LeoUEVpdO-3pSIMURWJRUAfSXCTcdLas" --
             <!-- projects -->
             <h2>Projects</h2>
             <ol style="list-style-position: inside">
-                <li>Project 1: < a href="https://kidy22.github.io/My-personal-Cv/" target="_blank">View My Cv</a></li>
-                <li>Project 2: < a href="https://kidy22.github.io/meme-generator/" target="_blank">View Meme Generator</a></li>
+                <li>Project 1: <link rel="View My Cv" href="https://kidy22.github.io/My-personal-Cv/"></li>
+                <li>Project 2: <link rel="View Meme Generator" href="https://kidy22.github.io/meme-generator/"></li>
                 <li>Project 3</li>
             </ol>
         </section>
